--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -137,7 +137,7 @@ a {
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 20px 20px 0;
 }
 .container__nav--logo img {
   max-width: 90px;
@@ -211,9 +211,34 @@ a {
 }
 .container__nav--menu {
   display: none;
+  z-index: 10;
 }
 .container__nav--menu.open {
   display: block;
+}
+.container__nav--submenu {
+  max-width: 1500px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+.container__nav--submenu .list__menu {
+  display: flex;
+  list-style: none;
+  margin-block-start: 0;
+  padding-inline-start: 0;
+}
+.container__nav--submenu .list__menu li a {
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  width: 100%;
+  display: flex;
+  padding: 5px 8px;
+  border: 1px solid var(--primary-yellow);
+  border-radius: 5px;
+  font-size: 14px;
+  color: var(--primary-yellow);
+  text-transform: uppercase;
 }
 
 .anim__dayandnight {
