--- a/assets/scss/scss_parts/layout/_header.scss
+++ b/assets/scss/scss_parts/layout/_header.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 20px 20px 0;
     &--logo {
       img {
         max-width: 90px;
@@ -87,8 +87,37 @@
 
     &--menu {
       display: none;
+      z-index: 10;
       &.open {
         display: block;
+      }
+    }
+    &--submenu {
+      max-width: 1500px;
+      width: 100%;
+      margin: 0 auto;
+      padding: 0 20px;
+      .list {
+        &__menu {
+          display: flex;
+          list-style: none;
+          margin-block-start: 0;
+          padding-inline-start: 0;
+          li {
+            a {
+              max-width: -moz-fit-content;
+              max-width: fit-content;
+              width: 100%;
+              display: flex;
+              padding: 5px 8px;
+              border: 1px solid var(--primary-yellow);
+              border-radius: 5px;
+              font-size: 14px;
+              color: var(--primary-yellow);
+              text-transform: uppercase;
+            }
+          }
+        }
       }
     }
   }
