--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -9,8 +9,8 @@
 
 // 3. Layout-related sections
 @import "scss_parts/layout/footer", "scss_parts/layout/header",
-  "scss_parts/sections/headboard", "scss_parts/sections/hero",
-  "scss_parts/sections/blog", "scss_parts/sections/journey";
+  "scss_parts/sections/history", "scss_parts/sections/history",
+  "scss_parts/sections/works";
 
 // 4. Components
 @import "scss_parts/components/buttons", "scss_parts/components/dots",
