--- a/assets/scss/scss_parts/components/_cards.scss
+++ b/assets/scss/scss_parts/components/_cards.scss
@@ -3,15 +3,20 @@
     &--card {
       display: flex;
       flex-direction: column;
+      width: 300px;
+      min-height: 700px;
       background-color: var(--white);
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      margin: 20px;
-      padding: 20px;
-      width: 300px;
+      margin: 10px;
+      padding: 10px;
+      @media (min-width: 768px) {
+        margin: 20px;
+        padding: 20px;
+      }
       img {
         width: 100%;
-        height: auto;
+        height: 350px;
         object-fit: cover;
         border-radius: 10px;
       }
