--- a/assets/scss/scss_parts/sections/_works.scss
+++ b/assets/scss/scss_parts/sections/_works.scss
@@ -55,10 +55,22 @@
           width: 70%;
         }
       }
-      img {
-        width: 100%;
-        @media (min-width: 992px) {
-          width: 30%;
+      .works {
+        &--image {
+          display: flex;
+          justify-content: center;
+          width: 100%;
+          object-fit: cover;
+          border-radius: 10px;
+          @media (min-width: 992px) {
+            width: 30%;
+          }
+          img {
+            width: 100%;
+            @media (min-width: 992px) {
+              width: 30%;
+            }
+          }
         }
       }
     }
