--- a/assets/scss/scss_parts/base/_base.scss
+++ b/assets/scss/scss_parts/base/_base.scss
@@ -17,6 +17,8 @@
   --primary-yellow: #f4d35e; // Yellow
   --primary-light-orange: #ee964b; // Light Orange
   --primary-dark-orange: #f95738; // Dark Orange
+
+  --secondary-blue: #1b262c; // Dark Blue
 }
 
 a {
