--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,7 +10,7 @@
 // 3. Layout-related sections
 @import "scss_parts/layout/footer", "scss_parts/layout/header",
   "scss_parts/sections/history", "scss_parts/sections/history",
-  "scss_parts/sections/works";
+  "scss_parts/sections/works", "scss_parts/sections/comments";
 
 // 4. Components
 @import "scss_parts/components/buttons", "scss_parts/components/dots",
