--- a/assets/scss/scss_parts/sections/_signup.scss
+++ b/assets/scss/scss_parts/sections/_signup.scss
@@ -1,6 +1,6 @@
 .container {
   &__form {
-    &--login {
+    &--signup {
       max-width: 512px;
       width: 100%;
       margin-left: auto;
@@ -66,29 +66,6 @@
               }
             }
           }
-        }
-      }
-    }
-  }
-  &__signup {
-    &--structure {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      margin: 20px 0;
-      &--title {
-        padding: 20px 0;
-        font-family: var(--poppins-font-family);
-        font-size: 22px;
-        line-height: 1.1;
-        font-weight: var(--poppins-font-weight-medium);
-        font-style: var(--poppins-font-style-normal);
-        color: var(--primary-blue);
-        text-align: center;
-        text-transform: uppercase;
-        @media (min-width: 768px) {
-          font-size: 26px;
         }
       }
     }
