--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -11,7 +11,7 @@
 @import "scss_parts/layout/footer", "scss_parts/layout/header",
   "scss_parts/sections/history", "scss_parts/sections/history",
   "scss_parts/sections/works", "scss_parts/sections/comments",
-  "scss_parts/sections/login";
+  "scss_parts/sections/login", "scss_parts/sections/signup";
 
 // 4. Components
 @import "scss_parts/components/buttons", "scss_parts/components/dots",
