--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -358,9 +358,11 @@ a {
   padding: 20px;
 }
 .container__nav--submenu .list__menu {
-  display: none;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   column-gap: 4%;
+  row-gap: 10px;
   list-style: none;
   margin-block-start: 0;
   margin: 0;
@@ -368,7 +370,7 @@ a {
 }
 @media (min-width: 768px) {
   .container__nav--submenu .list__menu {
-    display: flex;
+    flex-direction: row;
   }
 }
 .container__nav--submenu .list__menu li a {
