--- a/assets/scss/scss_parts/layout/_header.scss
+++ b/assets/scss/scss_parts/layout/_header.scss
@@ -125,15 +125,17 @@
       padding: 20px;
       .list {
         &__menu {
-          display: none;
+          display: flex;
+          flex-direction: column;
           justify-content: center;
           column-gap: 4%;
+          row-gap: 10px;
           list-style: none;
           margin-block-start: 0;
           margin: 0;
           padding-inline-start: 0;
           @media (min-width: 768px) {
-            display: flex;
+            flex-direction: row;
           }
           li {
             a {
